update css, add images

--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -2,7 +2,7 @@
   grid-area: button;
   width: fit-content;
   background-color: #0278fe;
-  color: white;
+  color: #ffffff;
   padding: 13px 20px;
   border-radius: 4px;
   border: none;
