--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,23 +4,26 @@
   line-height: 100px;
   text-align: center;
   padding: 0;
-  margin: 95px 255px 0;
-  width: 793px;
-  align-self: center;
+  margin: 0 auto;
+  max-width: 793px;
 }
 
-@media screen and (min-width: 550px) and (max-width: 1250px) {
+@media screen and (min-width: 768px) {
   .lead__title {
-    width: 90%;
     max-width: 720px;
-    margin: 91px 24px 0;
   }
 }
 @media screen and (max-width: 550px) {
   .lead__title {
+    width: 495px;
+    font-size: 60px;
+  }
+}
+
+@media screen and (max-width: 495px) {
+  .lead__title {
     font-size: 40px;
     line-height: 44px;
-    max-width: 288px;
-    margin: 50px 0 0 0;
+    width: 288px;
   }
 }
