--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,14 @@
 .footer__copyright {
     font-weight: normal;
     font-size: 14px;
-    line-height: 114%;
+    line-height: 16px;
+    text-align: right;
     margin: 0;
     padding: 0;
   }
 
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 768px) {
     .footer__copyright {
-      line-height: 100%;
+      margin: 0;
     }
   }
