--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,6 @@
 .header {
-  margin: 0 auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding-top: 34px;
-  object-fit: contain;
-}
-
-@media screen and (max-width: 380px) {
-  .header {
-    padding-top: 20px;
-  }
+  align-items: center;
 }
