--- a/blocks/intro/__quote-author/intro__quote-author.css
+++ b/blocks/intro/__quote-author/intro__quote-author.css
@@ -6,18 +6,18 @@
   padding: 0;
   margin-bottom: 32px;
   width: 90%;
-  max-width: 690px;
+  max-width: 720px;
   text-align: right;
 }
 @media screen and (min-width: 350px) and (max-width: 1250px) {
   .intro__quote-author {
-    max-width: 720px;
+    width: 720px;
     margin: 10px 24px 0;
   }
 }
 @media screen and (max-width: 350px) {
   .intro__quote-author {
-    max-width: 288px;
+    width: 288px;
     margin-bottom: 0;
     margin: 10px 16px 0;
   }
