--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,17 +4,17 @@
   line-height: 163%;
   margin: 0;
   padding: 0;
-  max-width: 690px;
+  max-width: 720px;
 }
 @media screen and (min-width: 350px) and (max-width: 1250px) {
   .intro__text {
-    max-width: 720px;
+    width: 720px;
     margin: 32px 24px 0;
   }
 }
 @media screen and (max-width: 350px) {
   .intro__text {
-    max-width: 288px;
+    width: 288px;
     margin: 32px 16px 0;
   }
 }
