--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,23 +1,21 @@
 .lead__image {
   margin: 0 auto;
   padding: 0;
-  width: 100%;
   max-width: 984px;
   max-height: 615px;
-  margin-top: 64px;
+  object-fit: cover;
 }
 
-@media screen and (min-width: 550px) and (max-width: 1250px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .lead__image {
-    max-width: 768px;
-    max-height: 480px;
+    width: 768px;
     margin-top: 36px;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 432px) {
   .lead__image {
-    min-width: 320px;
-    max-height: 200px;
+    width: 320px;
     margin-top: 40px;
   }
 }
+
