--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,24 +1,25 @@
 .lead__subtitle {
   font-size: 30px;
   line-height: 36px;
-  font-weight: normal;
+  font-weight: 400;
+  font-style:normal;
   text-align: center;
+  line-height: 1.2;
   margin: 0 auto;
   padding: 0;
-  margin-top: 32px;
-  width: 720px;
+  margin: 32px 0 64px;
+  max-width: 720px;
 }
-@media screen and (min-width: 550px) and (max-width: 1250px) {
+@media screen and (min-width: 768px) {
   .lead__subtitle {
-    width: 90%;
-    max-width: 720px;
+    margin: 32px auto 36px;
   }
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 432px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    max-width: 288px;
-    margin-top: 16px;
+    width: 288px;
+    margin: 16px auto 40px;
   }
 }
