--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 58px;
-    margin: 0 auto;
-    width: 984px;
+    margin: 0 auto 0;
+    max-width: 984px;
   }
