--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,15 +2,14 @@
   grid-area: image;
   margin: 0;
   padding: 0;
-  width: 100%;
-  max-width: 984px;
-
+  max-width: 460px;
+  max-height: 460px;
   object-fit: contain;
 }
 
 @media screen and (min-width: 768px) and (max-width: 984px) {
   .place__image {
-    max-width: 768px;
+    width: 340px;
   }
 }
 @media screen and (max-width: 400px) {
