--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,6 +7,8 @@
   max-height: 100%;
   padding: 118px 0 92px;
   box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 1024px) {
