--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,11 +4,21 @@
   line-height: 22px;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 32px;
+  max-width: 280px;
+  max-height: 66px;
 }
 
 @media screen and (max-width: 750px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .cover__subtitle {
+    margin-bottom: 16px;
+    height: 100%;
   }
 }
