--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,9 +8,9 @@
   max-width: 785px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1250px) {
+@media screen and (min-width: 350px) and (max-width: 1250px) {
   .intro__title {
-    width: 720px;
+    max-width: 720px;
     margin: 0 24px;
   }
 }
@@ -18,7 +18,7 @@
   .intro__title {
     font-size: 32px;
     line-height: 109%;
-    width: 288px;
+    max-width: 288px;
     margin: 0 16px;
   }
 }
