--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,7 +8,7 @@
   max-width: 793px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .lead__title {
     max-width: 720px;
   }
