--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,10 @@
     margin: 0 auto 0;
     max-width: 984px;
   }
+
+  @media screen and (max-width: 768px) {
+    .lead {
+      max-width: 768px;
+      margin: 0;
+    }
+  }
