--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,12 +4,22 @@
   margin: 0;
   padding: 0;
   margin-bottom: 25px;
+  margin-right: 148px;
 }
 .place__paragraph:last-child {
   margin-bottom: 0;
 }
+
 @media screen and (max-width: 800px) {
   .place__paragraph {
     font-size: 16px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .place__paragraph {
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
