--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,8 +2,7 @@
   grid-area: image;
   margin: 0;
   padding: 0;
-  max-width: 460px;
-  max-height: 460px;
+  width: 460px;
   object-fit: contain;
 }
 
