--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,10 +10,11 @@
   margin-right: auto;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width:768px) and (max-width: 1024px) {
   .photo-grid {
     padding: 90px 0 88px;
     grid-template-columns: repeat(2, 1fr);
+    max-width: 720px;
   }
 }
 @media screen and (max-width: 544px) {
