--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -8,11 +8,12 @@
 
 @media screen and (min-width: 768px) and (max-width: 984px) {
   .place__image {
-    width: 340px;
+    max-width: 340px;
   }
 }
 @media screen and (max-width: 400px) {
   .place__image {
     margin-bottom: 30px;
+    max-width: 320px;
   }
 }
