--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,18 @@
 .lead__image {
   margin: 0 auto;
   padding: 0;
-  max-width: 984px;
+  width: 100%;
   max-height: 615px;
   object-fit: cover;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .lead__image {
-    width: 768px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 432px) {
   .lead__image {
-    width: 320px;
+    width: 100%;
   }
 }
-
