--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,19 +2,12 @@
   grid-area: image;
   margin: 0;
   padding: 0;
-  max-width: 984px;
+  width: 100%;
   object-fit: contain;
-}
-
-@media screen and (min-width: 768px) and (max-width: 984px) {
-  .place__image {
-    max-width: 768px;
-  }
 }
 
 @media screen and (max-width: 400px) {
   .place__image {
     margin-bottom: 30px;
-    max-width: 320px;
   }
 }
