--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,8 +6,14 @@
   object-fit: contain;
 }
 
+@media screen and (min-width: 768px) and (max-width: 984px) {
+  .place__image {
+    max-width: 768px;
+  }
+}
 @media screen and (max-width: 400px) {
   .place__image {
+    width: 320px;
     margin-bottom: 30px;
   }
 }
