--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -3,3 +3,16 @@
     margin: 0;
     padding: 0;
   }
+  @media screen and (min-width: 750px) and (max-width: 820px) {
+    .place__paragraphs {
+      width: 352px;
+    }
+  }
+  
+  @media screen and (max-width: 750px) {
+    .place__paragraphs {
+      width: 288px;
+      padding: 32px 16px 30px 16px;
+      margin: 0 auto;
+    }
+  }
