--- a/blocks/cover/__button/cover__button.css
+++ b/blocks/cover/__button/cover__button.css
@@ -3,11 +3,16 @@
   margin-top: 32px;
   align-self: center;
   text-align: center;
-  max-width: 137px;
 }
 
 @media screen and (max-width: 750px) {
   .cover__button {
     margin-top: 16px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width:1280px){
+  .cover__button {
+    width: 137px;
   }
 }
