--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -23,7 +23,6 @@
     grid-template-columns: 340px 1fr;
     grid-gap: 48px 28px;
     margin: 0 auto;
-    padding: 72px 24px 0 24px;
     max-width: 720px;
   }
   .place:first-child {
@@ -44,6 +43,7 @@
     margin-top: 48px;
     padding: 0;
     max-width: 320px;
+    grid-row-gap: 30px;
   }
   .place:first-child {
     margin-top: 0;
