--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 320px) {
   .place__paragraphs {
     margin: 0 auto;
-    width: calc(100%- 32px);
+    width: calc(100%-32px);
   }
 }
